fix footer css shift

--- a/src/assets/css/input-elements.css
+++ b/src/assets/css/input-elements.css
@@ -1,8 +1,8 @@
-input[type=submit],
-input[type=text],
-input[type=email],
-input[type=number],
-input[type=password],
+input[type='submit'],
+input[type='text'],
+input[type='email'],
+input[type='number'],
+input[type='password'],
 textarea,
 select {
   padding: 10px 20px;
@@ -18,21 +18,21 @@ select {
   background: #fff;
 }
 
-input[type=submit]::placeholder,
-input[type=text]::placeholder,
-input[type=email]::placeholder,
-input[type=number]::placeholder,
-input[type=password]::placeholder,
+input[type='submit']::placeholder,
+input[type='text']::placeholder,
+input[type='email']::placeholder,
+input[type='number']::placeholder,
+input[type='password']::placeholder,
 textarea::placeholder,
 select::placeholder {
   color: var(--Basic-Fontsize-Secondary, #6b7280);
 }
 
-input[type=submit]:focus,
-input[type=text]:focus,
-input[type=email]:focus,
-input[type=number]:focus,
-input[type=password]:focus,
+input[type='submit']:focus,
+input[type='text']:focus,
+input[type='email']:focus,
+input[type='number']:focus,
+input[type='password']:focus,
 textarea:focus,
 select:focus {
   outline: none;
@@ -41,11 +41,11 @@ select:focus {
   transition: all 0.1s ease;
 }
 
-input[type=submit]:disabled,
-input[type=text]:disabled,
-input[type=email]:disabled,
-input[type=number]:disabled,
-input[type=password]:disabled,
+input[type='submit']:disabled,
+input[type='text']:disabled,
+input[type='email']:disabled,
+input[type='number']:disabled,
+input[type='password']:disabled,
 textarea:disabled,
 select:disabled {
   border: 1px solid var(--Color-Divider-Main, #e5e7eb);
